--- a/style.css
+++ b/style.css
@@ -689,7 +689,7 @@ button{
 .footer__copy{
     font-size: var(--smaller-font-size);
     text-align: center;
-    color: var(--text-color-light);
+    color: #fff;
     margin-top: var(--mb-3);
 }
 
